--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <video id="camera" autoplay playsinline class="hidden"></video>
   <div id="countdown" class="hidden">5</div>
   <button id="startBtn" class="hidden">Mulai Ambil Foto</button>
-  <div id="penjelasan" class="hidden"><p>Penjelasan frame:<br>
-  warna border foto hanya muncul di hasil foto, jika di download maka tidak ada border di fotonya, hasil foto yang di download polos sesuai warna frame yg dipilih
+  <div id="penjelasan" class="hidden"><p>Penjelasan foto & frame:<br>
+  warna border foto hanya muncul di hasil foto, jika di download maka tidak ada border di fotonya, hasil foto yang di download polos sesuai warna frame yg dipilih, lalu saat mengambil gambar kamera otomatis mirror karena bawaan dari browser, tetapi hasilnya tidak akan mirror, jadi aman saja
   <br><br> selamat menggunakan
   </p></div>
 
@@ -46,3 +46,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
